--- a/RAiN_analysis.Rmd
+++ b/RAiN_analysis.Rmd
@@ -156,7 +156,7 @@ employm_descrPlot <- clean_data %>%
 #                   educ_descrPlot,
 #                   income_descrPlot,
 #                   employm_descrPlot),
-#   ncol = 1)
+#   ncol = 2)
 
 age_descrPlot
 gender_descrPlot
@@ -173,7 +173,12 @@ employm_descrPlot
   
 ## Personal network and support activation
   
-```{r descriptives_networks, echo = FALSE, message = FALSE}
+  
+The plots show that we have what I believe to be a data quality problem: Many people seem to fill out all windows when asked for activation examples, alters they talked to in each example, and important people. Not sure how we can fix this. With activation alters, we may exclude, as a robustness check at least, everyone who filled out all 9 possible activation examples, and all alters for each example. With important people we probably shouldn't do anything, it's very possible that many people fill out all five slots for both family and non-family important people. Maybe we could exclude those people here as well who filled up everything for tie activation.
+  
+  
+  
+```{r descriptives_networks, echo = FALSE, message = FALSE, warning = FALSE}
 
 # Define helper function
 
@@ -220,10 +225,10 @@ nTies_descriptives <- clean_data %>%
                values_to = "n")
 
 
-# Create plots
-nTies_ActPlot <- nTies_descriptives %>%
-  ggplot(aes(n, color = tie_type)) +
-    geom_density() +
+# Create plot
+nTies_descriptives %>%
+  ggplot(aes(n, fill = tie_type)) +
+    geom_histogram(show.legend = FALSE) +
     main_theme_noMargin_smallFont +
     facet_wrap(.~tie_type, scales = "free")
 
@@ -233,17 +238,17 @@ nTies_ActPlot <- nTies_descriptives %>%
 # Generate data
 # map_dbl(alter_data, ~nrow())
 
-nActivation_descrPlot <- clean_data %>% 
-  mutate(act_instancesTotal = clean_data$alter_data %>% map_dbl(nrow),
-         act_instancesEmo = clean_data$alter_data %>% map(filter, activation_type == "emo") %>% max(activation_instance))
-
-
-# Per type: distrubtion of activation instances
-nActivation_descrPlot <- map(clean_data$alter_data, group_by, act_type) %>% 
-  map(~nrow(distinct(., act_instance))) %>% 
-  map_dfr(as_tibble, .name_repair = "universal") %>%
-  ggplot(aes(value)) +
-    geom_density() +
-    main_theme_noMargin_smallFont
+# nActivation_descrPlot <- clean_data %>% 
+#   mutate(act_instancesTotal = clean_data$alter_data %>% map_dbl(nrow),
+#          act_instancesEmo = clean_data$alter_data %>% map(filter, activation_type == "emo") %>% max(activation_instance))
+# 
+# 
+# # Per type: distrubtion of activation instances
+# nActivation_descrPlot <- map(clean_data$alter_data, group_by, act_type) %>% 
+#   map(~nrow(distinct(., act_instance))) %>% 
+#   map_dfr(as_tibble, .name_repair = "universal") %>%
+#   ggplot(aes(value)) +
+#     geom_density() +
+#     main_theme_noMargin_smallFont
 
 ```
